# myah

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTOR_LICENSE_AGREEMENT  Dockerfile  LICENSE-COMMERCIAL.md  LICENSE_NOTICE  README-platform.md  README.md  docker-compose.yml  hatch_build.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  run-compose.sh  svelte.config.js  tailwind.config.js  versions.env  vite.config.ts  vitest.workspace.ts
.github-platform/: pull_request_template.md
.github-platform/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github-platform/workflows/: integration-test.disabled
.github/workflows/: oss-e2e-shape.yml  pr-tests.yml  publish-image.yml
backend/: .gitignore  dev.sh  requirements.txt  start.sh  start_windows.bat
backend/myah/: __init__.py  __main__.py  config.py  constants.py  env.py  main.py  tasks.py
backend/myah/cli/: __init__.py  agent.py  doctor.py  env.py  install.py  logs.py  platform_.py  plugins.py  quickstart.py  status.py  uninstall.py  upgrade.py
backend/myah/internal/: db.py
backend/myah/lib/: __init__.py
backend/myah/migrations/: _default_model_split_helpers.py  env.py  script.py.mako
backend/myah/models/: access_grants.py  agent_capabilities_schemas.py  auths.py  chat_messages.py  chats.py  containers.py  cron_deliveries.py  files.py  folders.py  groups.py  models.py  notes.py  oauth_sessions.py  tags.py  user_provider_status.py  users.py
backend/myah/routers/: agent_capabilities.py  agent_config.py  agent_sessions.py  auths.py  chats.py  configs.py  containers.py  files.py  folders.py  hermes_media.py  myah.py  notes.py  openai.py  oss.py  processes.py  providers.py  tasks.py  users.py  utils.py
backend/myah/socket/: main.py  utils.py
backend/myah/static/: site.webmanifest
backend/myah/storage/: provider.py
backend/myah/test/: conftest.py  test_admin_cron_deliveries.py  test_critical_path_coverage_summary.py  test_cron_outbox.py  test_default_model_migration.py  test_docker_compose_oss_defaults.py  test_env_back_compat.py  test_hermes_sha_consistency.py  test_hermes_web.py  test_marketplace_migrations.py  test_no_owui_strings_in_public_tree.py  test_no_saas_enabling_code.py  test_no_submodule_references.py  test_oss_api_catchall.py  test_oss_auth_bootstrap.py  test_oss_probe.py  test_oss_probe_dashboard.py  test_oss_seed_user.py  test_plugin_sha_dedup.py  test_processes_no_router_level_gate.py  test_processes_oss_mode.py  test_processes_oss_route_classification.py  test_providers_active_provider_sync.py  test_seo_hygiene.py  test_setup_myah_oss_script.py  test_user_default_model_endpoint.py  test_user_model_pair.py
backend/myah/utils/: agent_proxy.py  agui_action_handlers.py  agui_adapter.py  agui_types.py  anthropic.py  artifact_triggers.py  audit.py  auth.py  chat.py  chat_payload.py  chat_tasks.py  cron_outbox_cleanup.py  cron_outbox_lifespan.py  cron_outbox_metrics.py  cron_outbox_worker.py  encryption.py  files.py  groups.py  headers.py  hermes_aggregation.py  hermes_media_persist.py  hermes_routing.py  hermes_stream_handler.py  hermes_web.py  logger.py  misc.py  models.py  oauth.py  output.py  payload.py  rate_limit.py  redis.py  response.py  security_headers.py  skill_compositions.py  task.py  tool_servers.py  ui_state.py  webhook.py
backend/open_webui/: __init__.py  config.py  env.py  main.py  tasks.py
backend/open_webui/models/: auths.py  chats.py  containers.py  user_provider_status.py  users.py
backend/open_webui/routers/: agent_capabilities.py  agent_config.py  agent_sessions.py  auths.py  chats.py  configs.py  containers.py  files.py  folders.py  hermes_media.py  myah.py  notes.py  openai.py  processes.py  providers.py  tasks.py  users.py  utils.py
backend/open_webui/socket/: main.py
backend/open_webui/storage/: provider.py
backend/open_webui/test/: test_hermes_sha_consistency.py  test_no_submodule_references.py  (+1 more)
backend/open_webui/utils/: auth.py  (+22 more)
cypress/e2e/: agent-settings.cy.ts  artifact-pane.cy.ts  chat-files.cy.ts  chat.cy.ts  integrations.cy.ts  registration.cy.ts  settings.cy.ts  stream-persistence.cy.ts
cypress/support/: e2e.ts  index.d.ts
docs/: CONTRIBUTING.md  SECURITY.md  cli-reference.md
docs/gotchas/: 2026-05-17-oss-auth-bootstrap-missing.md  2026-05-17-oss-dashboard-lan-exposure.md  2026-05-17-oss-public-deployment-mode-not-baked.md  2026-05-17-oss-try-again-no-refresh.md  2026-05-17-oss-two-process-hermes.md  2026-05-19-bug-approval-card-404.md  2026-05-19-bug-settings-modal-tabs.md  2026-05-19-bug-wrong-venv-launchagent.md  2026-05-19-oss-api-server-key-binding.md  2026-05-19-oss-cron-platform-base-url-drift.md  2026-05-19-oss-legacy-launchagent-conflict.md  _reliability-bug-template.md
scripts/: check_backend_lint.py  check_no_private_hermes_access.py  dev-oss.sh  e2e_ports.py  generate-ts-contract.sh  prune-i18n.mjs  seed_test_env.py  setup-myah-oss.sh  smoke-test-oss.sh  test_extract_myah_markers.py  verify-hermes-plugins-install.sh
scripts/coverage/: critical_path_summary.py
scripts/oss-service-templates/: dev.myah.hermes-dashboard.plist.in  dev.myah.hermes-gateway.plist.in
scripts/static-analysis/: fallow-changed-audit.sh  run-pyright.sh  run-ruff.sh  write_report.py
shared/contract/: __init__.py  _codegen_module.py  _generate_snapshot.py  enums.py  events.py  output_items.py  routes.py  samples.py  upstream-snapshot.json
src/: app.css  app.html  hooks.client.ts  hooks.server.ts  test-setup.ts
src/lib/: constants.ts  shortcuts.ts
src/routes/: +layout.svelte
static/: manifest.json  opensearch.xml
(+638 files in other folders)
