[project]
name = "myah"
description = "Myah — self-hostable web platform for Hermes Agent"
authors = [
    { name = "T3 Venture Labs Limited", email = "hello@myah.dev" }
]
maintainers = [
    { name = "T3 Venture Labs Limited", email = "hello@myah.dev" }
]
license = { file = "LICENSE" }
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",
    "itsdangerous==2.2.0",

    "python-socketio==5.16.1",
    "python-jose==3.5.0",
    "cryptography==46.0.5",
    "bcrypt==5.0.0",
    "argon2-cffi==25.1.0",
    "PyJWT[crypto]==2.11.0",
    "authlib==1.6.9",

    "requests==2.32.5",
    "aiohttp==3.13.2", # do not update to 3.13.3 - broken
    "async-timeout==5.0.1",
    "aiocache==0.12.3",
    "starlette-compress==1.7.0",
    "Brotli==1.1.0",
    # honcho-ai moved to platform-hosted/ — hosted-only memory backend
    "httpx[socks,http2,zstd,cli,brotli]==0.28.1",
    "starsessions[redis]==2.2.1",
    "python-mimeparse==2.0.0",
    "python-magic>=0.4",

    "sqlalchemy==2.0.48",
    "alembic==1.18.4",
    "peewee==3.19.0",
    "peewee-migrate==1.14.3",

    "pycrdt==0.12.47",
    "redis==7.4.0",

    "pytz==2026.1.post1",

    "loguru==0.7.3",
    "asgiref==3.11.1",
    "docker~=7.1.0",

    # Backs the `myah` CLI entrypoint defined in [project.scripts]
    # (myah/__init__.py). Previously satisfied transitively via
    # chromadb/huggingface_hub/transformers; those were dropped in T3-992
    # (Phase 5 of the OWI-legacy cleanup), which removed typer from the
    # image and crash-looped prod — uvicorn imports myah, which runs
    # __init__.py, which does `import typer` at module top.
    "typer>=0.12.0",

    "mcp==1.26.0",


    "boto3==1.42.62",

    "black==26.1.0",

    "googleapis-common-protos==1.72.0",
    "google-cloud-storage==3.9.0",

    "azure-identity==1.25.2",
    "azure-storage-blob==12.28.0",

    "ag-ui-protocol~=0.1",

    # sentry-sdk stays in OSS deps per audit §4.4 — gated on SENTRY_DSN_PLATFORM
    # env at runtime; init is a no-op when DSN is unset. Net dep size is ~1MB,
    # source-code changes required to strip would not be worth the bytes.
    "sentry-sdk[fastapi]>=2.57.0",

    # OpenTelemetry core APIs stay in OSS — shared modules (routers/openai.py,
    # utils/auth.py, utils/logger.py) do top-level `from opentelemetry import
    # trace`. The trace API is small (~200KB) and a no-op when no exporter is
    # configured. Only the heavyweight exporters + per-framework instrumentors
    # move to platform-hosted/.
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",

    # composio + opentelemetry-instrumentation-* + opentelemetry-exporter-*
    # moved to platform-hosted/pyproject.toml.
]
readme = "README.md"
requires-python = ">= 3.11"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary==2.9.11",
]
dev = [
    "pytest~=8.3.2",
    "pytest-docker~=3.2.5",
    # Codegen for the platform↔Hermes typed contract. See
    # ``platform/scripts/generate-ts-contract.sh`` and
    # ``.github/workflows/contract-typecheck.yml``.
    "pydantic-to-typescript>=2.0.0",
]

[project.scripts]
myah = "myah:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
sources = ["backend"]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "requirements.txt",
    "start.sh",
    "start_windows.bat",
    "webui.db",
    "chroma.sqlite3",
]
force-include = { build = "myah/frontend" }

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,package-lock.json,i18n,*.lock,*.css,*-bundle.js,locales,example-doc.txt,emoji-shortcodes.json'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'ans'

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
# Make `backend/` first on sys.path so `from myah.internal.db import Base`
# resolves against the source tree rather than the installed namespace package
# (which only ships `myah/frontend/`). Also add the platform root so
# the typed contract module (`shared.contract.*`) resolves from tests.
pythonpath = ["backend", "."]
asyncio_mode = "strict"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "C90",  # mccabe
  "Q",    # flake8-quotes
  "ICN",  # flake8-import-conventions
]

# Plugin configs:
flake8-import-conventions.banned-from = [ "ast", "datetime" ]
flake8-import-conventions.aliases = { datetime = "dt" }
flake8-quotes.inline-quotes = "single"
mccabe.max-complexity = 10
pydocstyle.convention = "google"
